# EffectiveMobileLearning

./: .coverage  .env  .test.env  pyproject.toml  pytest.ini
dog_classifier/: manage.py
dog_classifier/dog_app/: admin.py  controllers.py  forms.py  models.py  serializers.py  views.py
dog_classifier/dog_app/migrations/: 0001_initial.py
dog_classifier/dog_app/templates/dog_app/: base.html  create.html  detail.html  list.html
dog_classifier/dog_classifier/: asgi.py  db_config.py  settings.py  urls.py  wsgi.py
migrations/: env.py
src/: config.py  database.py  main.py
src/models/: __init__.py  trading.py
src/repositories/: base.py  trading.py
src/routers/: trading.py
src/schemas/: __init__.py  request_trading.py  response_trading.py  wrapper.py
src/services/: base.py  trading.py
src/utils/: time_utils.py
tasks/: task_1.py  task_2.py  task_3.py
tasks/task1/migrations/: env.py
tasks/task1/migrations/versions/: 09d3b58a8c86_create_tables.py
tasks/task1/src/: database.py  models.py
tasks/task2/migrations/: env.py
tasks/task2/migrations/versions/: 134c7cac8a6b_create_tables.py  90d3e1e8bf6d_create_tables.py  bcbd2e14f513_add_updated_on.py  e629b0ec6d9b_update_total_type.py  f716f8f97803_init_tables.py
tasks/task2/src/: config.py  database.py  decorators.py  main.py  models.py
tasks/task2/src/scraping/: parser.py
tests/: conftest.py  test_db.py  test_endpoints.py
